--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "nx serve",
     "build": "nx build",
     "test": "nx test",
-    "postinstall": "ngcc --properties es2020 browser module main"
+    "postinstall": "ngcc --properties es2020 browser module main",
+    "web-tasks:serve": "nx run web-tasks:serve"
   },
   "private": true,
   "devDependencies": {
