--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@angular/cli": "~14.0.0",
     "@angular/compiler-cli": "^14.0.0",
     "@angular/language-service": "^14.0.0",
+    "@nativescript/eslint-plugin": "~0.0.4",
+    "@nativescript/types": "~8.2.0",
+    "@nativescript/webpack": "~5.0.0",
+    "@ngtools/webpack": "^14.0.0",
     "@nrwl/angular": "^14.0.0",
     "@nrwl/cli": "13.9.5",
     "@nrwl/cypress": "14.3.6",
@@ -30,6 +34,8 @@
     "@nrwl/linter": "13.9.5",
     "@nrwl/workspace": "13.9.5",
     "@nstudio/angular": "14.3.0",
+    "@nstudio/nativescript": "14.3.0",
+    "@nstudio/nativescript-angular": "14.3.0",
     "@nstudio/web": "14.3.0",
     "@nstudio/web-angular": "14.3.0",
     "@nstudio/xplat": "^14.3.0",
@@ -45,16 +51,10 @@
     "jest-preset-angular": "11.0.0",
     "nx": "13.9.5",
     "prettier": "^2.5.1",
+    "sass": "^1.30.0",
     "ts-jest": "27.0.5",
     "ts-node": "~10.8.0",
-    "typescript": "~4.6.2",
-    "@nstudio/nativescript-angular": "14.3.0",
-    "@nstudio/nativescript": "14.3.0",
-    "sass": "^1.30.0",
-    "@nativescript/types": "~8.2.0",
-    "@nativescript/eslint-plugin": "~0.0.4",
-    "@nativescript/webpack": "~5.0.0",
-    "@ngtools/webpack": "^14.0.0"
+    "typescript": "~4.6.2"
   },
   "dependencies": {
     "@angular/animations": "^14.0.0",
@@ -65,17 +65,18 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@nativescript/angular": "^14.0.0",
+    "@nativescript/core": "~8.2.0",
     "@ngx-translate/core": "~14.0.0",
     "@ngx-translate/http-loader": "~7.0.0",
     "@nuvious/xplat-scss": "file:libs/xplat/scss/src",
     "core-js": "^3.6.5",
+    "date-fns": "^2.29.2",
+    "nativescript-ngx-fonticon": "~7.0.0",
+    "nativescript-theme-core": "^1.0.4",
     "rxjs": "^7.4.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4",
-    "@nativescript/core": "~8.2.0",
-    "nativescript-theme-core": "^1.0.4",
-    "@nativescript/angular": "^14.0.0",
-    "nativescript-ngx-fonticon": "~7.0.0"
+    "zone.js": "~0.11.4"
   },
   "xplat": {
     "prefix": "nuvious",
